--- a/css/main_style.css
+++ b/css/main_style.css
@@ -7,34 +7,35 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
-html, body {
+html, body, body {
   height: auto;
+  overflow: hidden; }
+
+html, body {
   background: #fff;
   font: 400 10px/1.846 RobotoDraft, Roboto, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility; }
 
-body {
-  height: auto; }
-  body .cf {
-    *zoom: 1; }
-    body .cf:before, body .cf:after {
-      content: " ";
-      display: table; }
-    body .cf:after {
-      clear: both; }
-  body a {
-    color: #0288d1;
-    cursor: pointer;
-    text-decoration: none; }
-  body img {
-    max-width: 100%;
-    vertical-align: middle; }
-  body h1, body h2,
-  body h3,
-  body h4 {
-    line-height: 1.25;
-    margin: 0; }
+body .cf {
+  *zoom: 1; }
+  body .cf:before, body .cf:after {
+    content: " ";
+    display: table; }
+  body .cf:after {
+    clear: both; }
+body a {
+  color: #0288d1;
+  cursor: pointer;
+  text-decoration: none; }
+body img {
+  max-width: 100%;
+  vertical-align: middle; }
+body h1, body h2,
+body h3,
+body h4 {
+  line-height: 1.25;
+  margin: 0; }
 
 /* ==========================================================================
    typography
